# Parsing_job_search_sites

./: README.md  pyproject.toml
main/: main.py
src/: change_attr_vac_sj.py  classes.py  json_saver.py  vacancies_from_API.py  vacancy.py
